--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="{{ page.description }}">
 	<meta name="author" content="Audrey Kaplan">
+	<!-- favicon-->
+	<link rel="shortcut icon" href="/images/favicon.ico">
 	<title>{{ page.title }} | Audrey Kaplan</title>		
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
