--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -324,13 +324,13 @@ textarea {
 }
 
 a {
-  color: #428bca;
+  color: #1ab3b3;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #2a6496;
+  color: #1ab3b3;
   text-decoration: underline;
 }
 
@@ -419,7 +419,7 @@ cite {
 }
 
 .text-primary {
-  color: #428bca;
+  color: #1ab3b3;
 }
 
 .text-warning {
@@ -435,7 +435,7 @@ cite {
 }
 
 .text-info {
-  color: #3a87ad;
+  color: #1ab3b3;
 }
 
 .text-left {
@@ -500,17 +500,17 @@ h6 {
 
 h1,
 .h1 {
-  font-size: 36px;
+  font-size: 32px;
 }
 
 h2,
 .h2 {
-  font-size: 30px;
+  font-size: 26px;
 }
 
 h3,
 .h3 {
-  font-size: 24px;
+  font-size: 20px;
 }
 
 h4,
@@ -605,7 +605,7 @@ dd {
     clear: left;
     text-align: right;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: normal;
   }
   .dl-horizontal dd {
     margin-left: 180px;
@@ -2080,8 +2080,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #1ab3b3;
+  border-color: #00b3b3;
 }
 
 .btn-primary:hover,
@@ -2090,8 +2090,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #3276b1;
-  border-color: #285e8e;
+  background-color: #1ab3b3;
+  border-color: #00b3b3;
 }
 
 .btn-primary:active,
@@ -2115,8 +2115,8 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #1ab3b3;
+  border-color: #00b3b3;
 }
 
 .btn-warning {
@@ -2285,7 +2285,7 @@ fieldset[disabled] .btn-info.active {
 
 .btn-link {
   font-weight: normal;
-  color: #428bca;
+  color: #1ab3b3;
   cursor: pointer;
   border-radius: 0;
 }
@@ -3268,7 +3268,7 @@ input[type="button"].btn-block {
 .dropdown-menu > li > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #428bca;
+  background-color: #1ab3b3;
 }
 
 .dropdown-menu > .active > a,
@@ -3276,7 +3276,7 @@ input[type="button"].btn-block {
 .dropdown-menu > .active > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #428bca;
+  background-color: #1ab3b3;
   outline: 0;
 }
 
@@ -3832,7 +3832,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #428bca;
+  border-color: #1ab3b3;
 }
 
 .nav .nav-divider {
@@ -3921,7 +3921,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #428bca;
+  background-color: #1ab3b3;
 }
 
 .nav-stacked > li {
@@ -3996,8 +3996,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .nav .caret {
-  border-top-color: #428bca;
-  border-bottom-color: #428bca;
+  border-top-color: #1ab3b3;
+  border-bottom-color: #1ab3b3;
 }
 
 .nav a:hover .caret {
@@ -4682,8 +4682,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
   z-index: 2;
   color: #ffffff;
   cursor: default;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #1ab3b3;
+  border-color: #1ab3b3;
 }
 
 .pagination > .disabled > span,
@@ -4831,7 +4831,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .label-primary {
-  background-color: #428bca;
+  background-color: #1ab3b3;
 }
 
 .label-primary[href]:hover,
@@ -4908,7 +4908,7 @@ a.badge:focus {
 
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #428bca;
+  color: #1ab3b3;
   background-color: #ffffff;
 }
 
@@ -4975,7 +4975,7 @@ a.list-group-item.active > .badge,
 
 a.thumbnail:hover,
 a.thumbnail:focus {
-  border-color: #428bca;
+  border-color: #1ab3b3;
 }
 
 .thumbnail > img {
@@ -5133,7 +5133,7 @@ a.thumbnail:focus {
   font-size: 12px;
   color: #ffffff;
   text-align: center;
-  background-color: #428bca;
+  background-color: #1ab3b3;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5288,8 +5288,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #1ab3b3;
+  border-color: #1ab3b3;
 }
 
 .list-group-item.active .list-group-item-heading,
@@ -5446,21 +5446,21 @@ a.list-group-item:focus {
 }
 
 .panel-primary {
-  border-color: #428bca;
+  border-color: #1ab3b3;
 }
 
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #1ab3b3;
+  border-color: #1ab3b3;
 }
 
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #428bca;
+  border-top-color: #1ab3b3;
 }
 
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #428bca;
+  border-bottom-color: #1ab3b3;
 }
 
 .panel-success {
