--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ blockquote p { font-size: 16px; line-height: 1.6em; }
 
 /* Navigation */
 h3.text-muted a {text-decoration: none; color: #999999; }
-h3.text-muted a:hover { text-decoration: none; color: #0088cc; }
+h3.text-muted a:hover { text-decoration: none; color: #1ab3b3; }
 
 img.avatar { margin-bottom: 30px; }
 		
@@ -52,13 +52,13 @@ ul.swatch li:first-child { webkit-border-top-left-radius: 9px; -webkit-border-bo
 .swatch-log p { font-size: 14px; clear: left; margin-top: 10px; font-family: 'Montserrat', Helvetica, sans-serif; text-transform: uppercase; }
 .clear { clear: both; height: 20px; }
 
-/* CV */
-.cv {line-height: 23px; width: 90%; margin: 0 auto;}
-.cv li { line-height: 23px; }
-.cv h2 { font-size: 26.5px; }
-.cv h1 { font-size: 32.5px; }
+/* Resume */
+.resume {line-height: 23px; width: 90%; margin: 0 auto;}
+.resume li { line-height: 23px; }
+/*.resume h2 { font-size: 26.5px; }*/
+/*.resume h1 { font-size: 32.5px; }*/
 
-.notes, .contact, .about, .cv, .error, .swatches { margin-bottom: 30px; }
+.resume, .projects, .contact, .about, .error, .swatches { margin-bottom: 30px; }
 
 /* Contact */
 iframe {font-family: 'Merriweather', Georgia, Times; font-size: 16px;}
@@ -68,7 +68,7 @@ iframe {font-family: 'Merriweather', Georgia, Times; font-size: 16px;}
 
 /* Guides */
 .guide { width: 90%; margin: 0 auto 60px auto; line-height: 26px;}
-.guide .title { padding: 100px 30px 0px; width: 100%; height: 60%; margin-bottom: 40px; background: #d5d5d5; color: #428bca; }
+.guide .title { padding: 100px 30px 0px; width: 100%; height: 60%; margin-bottom: 40px; background: #d5d5d5; color: #1ab3b3; }
 .guide .title h1 { font-size: 46px; color: #181818; }
 .guide p { margin: 0 0 1em;  }
 .guide img { border: solid 1px #d5d5d5; border-radius: 4px; margin: 40px auto; display: block; }
