Updates to resume and projects

--- a/css/jumbotron-narrow.css
+++ b/css/jumbotron-narrow.css
@@ -31,6 +31,10 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
+.buffer {
+	padding-bottom: 25px;
+}
+
 /* Customize container */
 @media (min-width: 768px) {
   .container {
