--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,8 @@ blockquote p { font-size: 16px; line-height: 1.6em; }
 h3.text-muted a {text-decoration: none; color: #999999; }
 h3.text-muted a:hover { text-decoration: none; color: #1ab3b3; }
 
-img.avatar { margin-bottom: 30px; }
-		
-/* Custom container */
-.container > hr { margin: 30px 0; }
-.container > hr.footer {margin-bottom: 15px; }
 
+		
 /* E-Mail */
 .obfuscate { unicode-bidi: bidi-override; direction: rtl; }
 
@@ -27,8 +23,6 @@ img.avatar { margin-bottom: 30px; }
 .jumbotron { margin: 80px 0; }
 .jumbotron h1 { font-size: 72px; line-height: 1; }
 .jumbotron .btn { font-size: 21px; padding: 14px 24px; }
-.marketing p { line-height: 25px; }
-.marketing p.lead { line-height: 30px; }
 
 /* Notes */
 .notelist { width: 600px; margin: 0 auto; }
@@ -53,12 +47,25 @@ ul.swatch li:first-child { webkit-border-top-left-radius: 9px; -webkit-border-bo
 .clear { clear: both; height: 20px; }
 
 /* Resume */
+/*
 .resume {line-height: 23px; width: 90%; margin: 0 auto;}
 .resume li { line-height: 23px; }
-/*.resume h2 { font-size: 26.5px; }*/
-/*.resume h1 { font-size: 32.5px; }*/
+.resume h2 { font-size: 26.5px; }
+.resume h1 { font-size: 32.5px; }
+*/
 
-.resume, .projects, .contact, .about, .error, .swatches { margin-bottom: 30px; }
+/*.resume, .projects, .contact, .about, .error, .swatches { margin-bottom: 30px; }*/
+
+/* Custom formatting to use on all pages */
+.custom { margin-bottom: 30px; }
+.custom p { line-height: 25px; }
+.custom p.lead { line-height: 30px; }
+
+/* Custom container */
+.container > hr { margin: 30px 0; }
+.container > hr.footer {margin-bottom: 15px; }
+
+img.avatar { margin-bottom: 30px; }
 
 /* Contact */
 iframe {font-family: 'Merriweather', Georgia, Times; font-size: 16px;}
